--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,26 @@
 /*  your css code here. If applicable */
+*{
+	padding:0;
+	margin:0;
+}
+
+.main{
+	background-color:#f5f5f5;
+	padding:22px;
+	display:flex;
+	flex-direction:column;
+	gap:20px;
+}
+
+.testimonial{
+	padding:10px;
+	border:1px solid lightgray;
+	background-color:white;
+	font-size:9px;
+}
+
+.author-name{
+	text-align:right;
+	font-style:italic;
+	
+}
